[gd_scene load_steps=2 format=3 uid="uid://d0lgicfm7qime"]

[ext_resource type="Script" uid="uid://cnky7hv4o2gpc" path="res://src/abilities/ability_slot.gd" id="1_03gij"]

[node name="AbilitySlot" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_03gij")

[node name="IconDisplay" type="TextureRect" parent="."]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
